--- a/djangoapp/templates/djangoapp/base.html
+++ b/djangoapp/templates/djangoapp/base.html
@@ -9,67 +9,63 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="shortcut icon" href="{% static 'img/infinity.png' %}" type="image/x-icon">
+
     <title>Главная страница</title>
     <link href="{% static 'knit.css' %}" rel="stylesheet">
+        <link href="{% static 'page_style.css' %}" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100">
-    <header class="p-2 mb-3  border-bottom container-fluid shadow">
-        <div class="container-fluid col-lg-10 ">
-            <div class="navbar navbar-expand-lg navbar-light bg-transparent ">
-                <a class="navbar-brand fs-4 col-2 " href=" {%url 'index' %}">
-                    <img src="{% static 'img/infinity-red.png' %}" class="mb-1" width="30" height="30" alt="">
-                    Нить
-                </a>
-                <!--Кнопка для открытия свернутого меню -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#userInfo"
-                    aria-controls="userInfo" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-nav collapse navbar-collapse align-content-end ms-auto" id="userInfo">
-                    <ul class="nav">
-                        <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Категории</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Одежда</a></li>
-                                <li><a class="dropdown-item" href="#">Украшения</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Декор</a></li>
-                            </ul>
-                        </li>
-                    </ul>
 
-                    <div class="container me-auto border-1">
-                        <div class="input-group">
-                            <input type="search" class="form-control" placeholder="Все категории" aria-label="Search"
-                                aria-describedby="button-search">
-                            <a href="#" class=" btn btn-outline-primary" id="button-search"><img src="{% static '/img/search.png' %}"
-                                    width="25" height="25" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="nav col-md-auto mb-2 justify-content-center mb-md-0">
-                        <a class="nav-link col-12 col-lg-auto text-center" href="{% url 'monitor' %}">Мой магазгин</a>
-                        <a class="nav-link col-12 col-lg-auto text-center" href="#">Покупки</a>
-                        <a class="nav-link col-12 col-lg-auto text-center" href="#">Войти</a>
-                    </div>
-                </div>
-            </div>
+
+<nav class="navbar navbar-expand-md navbar-light panel">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img class="px-2" alt="..." src="{% static 'img/log3.ico' %}"
+        /></a>
+<a class="navbar-brand link_style_for_main" href=" {%url 'index' %}" id="main_name"> ГУП «Колыванский камнерезный<br/>завод имени И.И. Ползунова»</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+
+
+
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="catalog.html">Каталог изделий</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="contacts.html">Контакты</a>
+            </li>
+          </ul>
+          <form class="d-flex me-2 my-2">
+            <input class="me-2" type="text" />
+            <button class="btn btn-dark" type="submit">Поиск</button>
+          </form>
+          <a class="btn btn-dark my-2" href="{% url 'monitor' %}">Вход</a>
         </div>
+      </div>
+    </nav>
 
-    </header>
+
 
     {% block content %}{% endblock %}
 
-    <footer class="footer p-3 d-flex mt-auto justify-content-center bottom-0">
-        <div class="container text-center text-white">
-            © 2022 Copyright:
-            <a class="text-white" href="{% url 'index' %}">knit.local</a>
-        </div>
-    </footer>
+
 
     <!-- JavaScript: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
