--- a/djangoapp/templates/djangoapp/detail.html
+++ b/djangoapp/templates/djangoapp/detail.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="carousel-inner" >
                         <div class="carousel-item active">
-                  <img class="rounded-circle" {% if product.image  %} src="{{product.image.url}}" {% endif %} alt="Not Found" style="width: 45px"/>
+                  <img class="rounded-circle"  src="{{product.image.url}}" role="img" alt="Not Found"/>
 
                         </div>
                     </div>
