--- a/djangoapp/templates/djangoapp/product_edit.html
+++ b/djangoapp/templates/djangoapp/product_edit.html
@@ -3,7 +3,7 @@
  {% block content %}
 
     <main class="container block_back col-md-8" id="content">
-        <h3>Редактирование товара</h3>
+        <h3>Добавление</h3>
         <form method="post" enctype="multipart/form-data">{% csrf_token %}
              <div class="row">
             <div class="col-md-6 mt-2">
