--- a/djangoapp/templates/djangoapp/confirm_delete.html
+++ b/djangoapp/templates/djangoapp/confirm_delete.html
@@ -5,7 +5,7 @@
         <div class="form-group  block_back p-3">
             <form method="post">{% csrf_token %}
                 <h3 ><center>Удаление товара</center></h3>
-          <center>  <label>Вы уверены, что хотите удалить обявление "{{ product.name }}"?</label></center>
+          <center>  <label>Вы уверены, что хотите удалить изделие "{{ product.name }}"?</label></center>
              <div class="row justify-content-around mb-3">
 
               <input type="submit" value="Удалить" class="btn btn-success col-md-2 pb-2 me-2 mt-2" id="save">
